Valuetype Beløp fase 2. Erstatt modell/typer/Beløp (#4627)
* Valuetype Beløp fase 2. Erstatt modell/typer/Beløp

* Litt flere beløp i responsDtos